cursive-bootstrap/tests/ui/E-CON/E-CON-0281.cursive
// RUN: compile-fail
// DIAG: E-CON-0281
// SPEC: 8.9
// DESC: Async closure captures reference with insufficient lifetime

async procedure capture_ref() -> Future<i32> {
    let x: i32 = 42
    let closure = async || {  //~ ERROR E-CON-0281: async closure lifetime
        return x
    }
    return sync closure()
}

public procedure main(move ctx: Context) -> i32 {
    return 0
}
